--- a/app/static/app/pet_profile.css
+++ b/app/static/app/pet_profile.css
@@ -51,9 +51,13 @@
 }
 .profile-body h2 {
   /* text-align: center; */
+  font-size: 1.5rem;
+  text-align: start;
   margin: 2rem 0 1rem 0;
 }
-/* .profile-body p{} */
+.profile-body p {
+  font-size: 1.25rem;
+}
 .contact {
   padding: 2rem;
 }
