--- a/app/templates/app/includes/social_share.html
+++ b/app/templates/app/includes/social_share.html
@@ -1,7 +1,7 @@
 {% load social_share %}
 
 <div class="social-icons">
-  <h2>Share on:</h2>
+  <h2>Share</h2>
   <button class="share-icon facebook">
     {% post_to_facebook object_or_url '<i class="fab fa-facebook"></i>' %}
   </button>
