--- a/app/templates/app/pet_cv.html
+++ b/app/templates/app/pet_cv.html
@@ -26,7 +26,7 @@
         <p>Size: {{pet.size}}</p>
       </div>
     </div>
-    <img class="img profile-img" src="{{ pet.image.url }}" />
+    <img class="profile-img" src="{{ pet.image.url }}" />
   </div>
   <!-- profile body-->
   <div class="profile-body">
@@ -59,6 +59,7 @@
 {% for comment in comments %}
 <div class="single-comment">
   <h3>{{comment.name}}</h3>
+  <h4>{{comment.title}}</h4>
   <p>{{comment.comment}}</p>
   <p>{{comment.create_at}}</p>
 </div>
