--- a/static/base.css
+++ b/static/base.css
@@ -80,11 +80,9 @@ a {
   transform: translateY(2px);
 }
 
-/* .content {
-  position: relative;
-  min-height: 100vh;
-  width: 100%;
-} */
+main {
+  padding: 1rem;
+}
 /* end of globals styles */
 .nav-center {
   height: 75px;
@@ -198,7 +196,7 @@ a {
   flex-direction: column;
   justify-content: start;
   align-items: center;
-  height: 100%;
+  min-height: 100vh;
   width: 100%;
   background-color: var(--primary-color-extra-light);
   border-radius: var(--border-radius-2);
@@ -226,13 +224,13 @@ a {
   position: relative;
   min-height: 100vh;
   width: 100%;
-  padding: 1rem;
 }
 
 @media screen and (min-width: 960px) {
   .main-container {
     display: grid;
     grid-template-columns: 3fr 1fr;
+    padding: 1rem;
   }
 
   .card {
@@ -278,6 +276,11 @@ textarea {
 }
 input {
   height: 35px;
+  padding: 1.5rem;
+  border-radius: var(--border-radius-1);
+  text-align: center;
+  font-size: inherit;
+  font-family: inherit;
 }
 textarea {
   resize: none;
@@ -292,6 +295,10 @@ textarea {
   background: var(--primary-color-extra-light);
   padding: 1rem 2rem;
   box-shadow: var(--box-shadow-2);
+}
+.single-comment h4 {
+  margin: 0;
+  text-align: start;
 }
 
 /* end main-comment-form */
@@ -380,6 +387,7 @@ label {
   gap: 20px;
   justify-content: center;
   align-items: center;
+  padding: 0.5rem;
 }
 
 .share-icon {
@@ -388,6 +396,12 @@ label {
   width: 70px;
   color: white;
   border-radius: 5px;
+}
+.social-icons h2 {
+  text-align: center;
+  margin: 0;
+  text-transform: capitalize;
+  padding: 0.5rem 0;
 }
 .share-icon a {
   color: white;
@@ -535,4 +549,22 @@ small {
 .internal-link {
   text-decoration: underline;
   color: var(--primary-color-extra-dark);
+}
+
+.no-result {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  width: 100%;
+  color: var(--primary-color-dark);
+  font-size: 1.5rem;
+  font-weight: bold;
+  text-transform: uppercase;
+  text-align: center;
+}
+.no-result .btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 1rem;
 }
