--- a/app/templates/app/pet_cv.html
+++ b/app/templates/app/pet_cv.html
@@ -36,11 +36,11 @@
     <p>{{pet.skills}}</p>
     <h2>Achivements</h2>
     <p>{{pet.achievements}}</p>
-    <h2>What I links</h2>
+    <h2>What I like</h2>
     <p>{{pet.things_I_like}}</p>
-    <h2>Thins I dont like so much</h2>
+    <h2>I dont like</h2>
     <p>{{pet.things_Dont_like}}</p>
-    <h2>What I would like to revice</h2>
+    <h2>Compentation</h2>
     <p>{{pet.desire_compensation}}</p>
   </div>
   <div class="contact">
