--- a/app/templates/app/results.html
+++ b/app/templates/app/results.html
@@ -46,6 +46,7 @@ body {% endcomment %}
       class="search-input"
       name="query"
       type="text"
+      autocomplete="off"
     />
   </form>
   <a href="/" class="btn">Back Home</a>
