--- a/static/base.css
+++ b/static/base.css
@@ -165,7 +165,7 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 2rem;
+  gap: 1rem;
   text-transform: capitalize;
 }
 
@@ -224,6 +224,7 @@ main {
   position: relative;
   min-height: 100vh;
   width: 100%;
+  overflow: hidden;
 }
 
 @media screen and (min-width: 960px) {
@@ -355,6 +356,7 @@ label {
 
 .form textarea {
   resize: none;
+  padding: 0.5rem;
 }
 
 .create-cv-form-contact {
