--- a/templates/base.html
+++ b/templates/base.html
@@ -34,6 +34,7 @@
                 class="search-input"
                 name="query"
                 type="text"
+                autocomplete="off"
               />
             </form>
             <!--end of  search-->
