--- a/app/templates/app/create_cv.html
+++ b/app/templates/app/create_cv.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="{% static '/base.css' %}" />
 {% endblock styles %}
 <!---->
-{%block title %}Home Page{%endblock title %}
+{%block title %}Pet Board || Create CV{%endblock title %}
 <!---->
 {%block content %}
 <!---->
