--- a/app/templates/app/create_find_me.html
+++ b/app/templates/app/create_find_me.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="{% static '/base.css' %}" />
 {% endblock styles %}
 <!---->
-{%block title %}Create Find Me{%endblock title %}
+{%block title %}Pet Board || Create Find Me{%endblock title %}
 <!---->
 {%block content %}
 <!---->
