--- a/app/templates/app/find_me_pet.html
+++ b/app/templates/app/find_me_pet.html
@@ -8,7 +8,7 @@
 {% endblock styles %}
 <!-- -->
 
-{%block title %}{{pet.name}}{%endblock title %}
+{%block title %}Find Me || {{pet.name}}{%endblock title %}
 
 <!-- content-->
 {% block content %}
