--- a/app/templates/app/pet_cv.html
+++ b/app/templates/app/pet_cv.html
@@ -8,7 +8,7 @@
 {% endblock styles %}
 <!-- -->
 
-{%block title %}Home Page{%endblock title %}
+{%block title %}CV || {{pet.name}}{%endblock title %}
 
 <!-- content-->
 {% block content %}
