--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- reference your installed Font Awesome Free package's files here -->
+    <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon" />
     <script src="{% static 'fontawesomefree/js/all.min.js' %}"></script>
     {% block styles %}
     <link rel="stylesheet" href="{% static '/base.css' %}" />
