--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- reference your installed Font Awesome Free package's files here -->
     <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="{% static 'favicon.ico' %}"
+    />
     <script src="{% static 'fontawesomefree/js/all.min.js' %}"></script>
     {% block styles %}
     <link rel="stylesheet" href="{% static '/base.css' %}" />
