--- a/app/templates/app/includes/social_share.html
+++ b/app/templates/app/includes/social_share.html
@@ -11,6 +11,6 @@
   </button>
   <!--  -->
   <button class="share-icon twitter">
-    {% post_to_twitter object_or_url '<i class="fab fa-twitter"></i>' %}
+    {% post_to_twitter "" object_or_url '<i class="fab fa-twitter"></i>' %}
   </button>
 </div>
