--- a/static/base.css
+++ b/static/base.css
@@ -276,6 +276,7 @@ textarea {
   padding: 1rem 2rem;
 }
 input {
+  width: 100%;
   height: 35px;
   padding: 1.5rem;
   border-radius: var(--border-radius-1);
@@ -311,6 +312,9 @@ textarea {
 }
 
 .form select {
+  width: 100%;
+  max-width: 200px;
+  margin: 0 auto;
   height: 35px;
 }
 label {
@@ -335,7 +339,8 @@ label {
   justify-content: center;
   align-items: center;
   height: unset;
-  margin: 0.5rem 0;
+  margin: 0.5rem auto;
+  flex-wrap: wrap;
 }
 .form-img input {
   height: unset;
